force-app/main/default/objects/GTM_Link_Event__c/GTM_Link_Event__c.object-meta.xml
<CustomObject>
    <label>GTM Activity Log</label>
    <pluralLabel>GTM Activity Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Records prospect activity on shared engagement links: page views, form interactions, and submissions.</description>
</CustomObject>