force-app/main/default/objects/GTM_Link_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Who this turned out to be. A visitor is anonymous until they submit the form; on submission the whole session is stamped with the Contact, so the reading that led to the request is attributable to a person. This is identity stitching, the same idea as Marketing Cloud Personalization resolving an anonymous profile to a known one.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Link Events</relationshipLabel>
    <relationshipName>GTM_Link_Events</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>