force-app/main/default/objects/GTM_Link_Event__c/fields/Dwell_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Seconds__c</fullName>
    <description>How long the section was actually on screen, in seconds. A view says the section scrolled past; dwell says it was read. Neither Adobe nor Marketing Cloud Personalization capture this out of the box — both need a custom rule — so it is measured here with an IntersectionObserver.</description>
    <label>Dwell (seconds)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>