force-app/main/default/objects/GTM_Link_Event__c/fields/Saved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Saved_Configuration__c</fullName>
    <label>Saved Configuration</label>
    <type>Lookup</type>
    <referenceTo>GTM_Saved_Configuration__c</referenceTo>
    <relationshipLabel>Link Events</relationshipLabel>
    <relationshipName>GTM_Link_Events</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>