force-app/main/default/objects/GTM_Link_Event__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order of this event within its session, starting at 1. Without it the events of a session are only orderable by CreatedDate, which is second-resolution and ties constantly when a page fires several at once — so the path a visitor actually took could not be reconstructed.</description>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>