force-app/main/default/objects/GTM_Link_Event__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session ID</label>
    <type>Text</type>
    <length>80</length>
    <description>Browser-generated UUID grouping all events from a single visit.</description>
</CustomField>