force-app/main/default/objects/GTM_Link_Event__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Text</type>
    <length>100</length>
    <description>Step or section the prospect was on when the event occurred (e.g. "platform", "environment-size", "context").</description>
</CustomField>