force-app/main/default/objects/GTM_Link_Event__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>What was interacted with, when the event is an interaction rather than a view: the name of a button, link or reveal. Adobe carries the equivalent as web.webInteraction.name.</description>
    <label>Target</label>
    <length>120</length>
    <type>Text</type>
</CustomField>